<resources>
    <string name="app_name">Eventos 20212472</string>
    <string name="no_events">No hay eventos programados</string>
    <string name="add_event">Agregar nuevo evento</string>
    <string name="event_name">Nombre del evento</string>
    <string name="event_date">Seleccionar Fecha</string>
    <string name="event_time">Seleccionar Hora (Opcional)</string>
    <string name="event_periodicity">Periodicidad</string>
    <string name="event_notification">Plazo de notificación</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="delete">Eliminar</string>
    <string name="edit_event">Editar Evento</string>
    <string name="confirm_delete_title">Confirmar eliminación</string>
    <string name="confirm_delete_message">¿Estás seguro de que deseas eliminar este evento?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="event_updated">Evento actualizado</string>
    <string name="event_saved">Evento guardado</string>
</resources>
